feat: reg view model page added and updated.

--- a/Tool-Data-Inventory-Manager/RegisterViewModel.xaml
+++ b/Tool-Data-Inventory-Manager/RegisterViewModel.xaml
@@ -111,6 +111,9 @@
             <Button Content="Regisztráció" Height="40" Margin="0,20,0,0"
                     Background="#0078D7" Foreground="White"
                     FontWeight="SemiBold" BorderBrush="{x:Null}" />
+            <Button Content="Vissza" Height="40" Margin="0,20,0,0"
+                     Foreground="Black" Click="Button_Click"
+                    FontWeight="SemiBold" BorderBrush="{x:Null}" />
         </StackPanel>
     </Grid>
 
