--- a/Tool-Data-Inventory-Manager/Login.xaml
+++ b/Tool-Data-Inventory-Manager/Login.xaml
@@ -5,9 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Tool_Data_Inventory_Manager"
         mc:Ignorable="d"
-        Title="Login" Height="450" Width="800">
+        Title="Login" Height="400" Width="650"
+        WindowStartupLocation="CenterScreen">
 
-    <Grid>
+    <Grid RenderTransformOrigin="0.524,0.414" HorizontalAlignment="Center" Width="800" Height="434" VerticalAlignment="Center">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="195*"/>
+            <ColumnDefinition Width="197*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -15,12 +20,12 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Felhasználónév:" Grid.Row="0" Margin="10"/>
-        <TextBox Grid.Row="0" Margin="80,10,10,10" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBlock Text="Eamil:" Grid.Row="3" Margin="194,52,100,-29"/>
+        <TextBox Grid.Row="3" Margin="194,75,359,-52" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2"/>
 
-        <TextBlock Text="Jelszó:" Grid.Row="1" Margin="10"/>
-        <PasswordBox x:Name="PasswordBox" Grid.Row="1" Margin="80,10,10,10" />
-        <Button Content="Bejelentkezés" Grid.Row="2" Margin="10" Click="LoginButton_Click"/>
-        <Button Content="Regisztráció" Grid.Row="3" Margin="10" Click="RegisterButton_Click"/>
+        <TextBlock Text="Jelszó:" Grid.Row="3" Margin="194,126,122,-103" RenderTransformOrigin="2.009,1.228"/>
+        <PasswordBox x:Name="PasswordBox" Grid.Row="3" Margin="194,149,359,-126" Grid.ColumnSpan="2" />
+        <Button Content="Bejelentkezés" Grid.Row="3" Margin="315,200,359,-183" Click="LoginButton_Click" RenderTransformOrigin="-1.755,4.125" Grid.ColumnSpan="2"/>
+        <Button Content="Vissza" x:Name="btn_back" Grid.Row="3" Margin="211,338,0,-318" Click="btn_back_Click" HorizontalAlignment="Left" Width="126" RenderTransformOrigin="0.5,0.5" Background="#FFDDDDDD" Grid.Column="1"/>
     </Grid>
 </Window>
