--- a/Tool-Data-Inventory-Manager/Login.xaml
+++ b/Tool-Data-Inventory-Manager/Login.xaml
@@ -3,29 +3,103 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Tool_Data_Inventory_Manager"
+        xmlns:local="clr-namespace:Tool_Data_Inventory_Manager"        
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="Login" Height="400" Width="650"
         WindowStartupLocation="CenterScreen">
 
-    <Grid RenderTransformOrigin="0.524,0.414" HorizontalAlignment="Center" Width="800" Height="434" VerticalAlignment="Center">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="195*"/>
-            <ColumnDefinition Width="197*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+    <Border Width="650"
+            Height="400"
+            Background="White"
+            CornerRadius="6">
+        <Border.Effect>
+            <DropShadowEffect BlurRadius="15"
+                              Direction ="-90" 
+                              RenderingBias ="Quality" 
+                              ShadowDepth ="2" 
+                              Color ="Gray" />
+        </Border.Effect>
+        <StackPanel Orientation="Vertical"
+                    Margin="20">
+            <TextBlock Text="Login" 
+                       FontSize="25"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       FontWeight="Bold"
+                       Padding="10"
+                       />
+            <Grid VerticalAlignment="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Email:" 
+                   Grid.Row="0"
+                   Margin="90,33,0,33"
+                   HorizontalAlignment="Left" Grid.RowSpan="2"/>
+                <TextBox
+                  Grid.Row="1"
+                  Padding="0,5"
+                  Width="254"
+                  BorderThickness="0,0,0,1"
+                  HorizontalAlignment="Center"
+                  Text="example@example.com" Margin="0,33,0,33"/>
+                <TextBlock Text="Password" 
+                   Grid.Row="3"
+                   Margin="89,0,0,-3"
+                   HorizontalAlignment="Left"/>
+                <PasswordBox Grid.Row="3"
+                      Password="mpcodes"
+                      Padding="0,5"                           
+                      Width="255"
+                      BorderThickness="0,0,0,1"
+                      HorizontalAlignment="Center"/>
+            </Grid>
+            <TextBlock Text="forgot password?" 
+                       HorizontalAlignment="Right"/>
+            <Button x:Name="LoginBtn" 
+                    Content="Login" 
+                    Foreground="White"
+                    Background="Black"
+                    Margin="0,25"
+                    Height="35"
+                    Width="250">
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border x:Name="LoginBorder" Background="{TemplateBinding Background}"
+                                            CornerRadius="16">
+                                        <ContentPresenter HorizontalAlignment="Center" 
+                                                          VerticalAlignment="Center"/>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="AliceBlue" TargetName="LoginBorder"  />
+                                            <Setter Property="TextBlock.Foreground" Value="Black"  TargetName="LoginBorder" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
+            </Button>
+            <TextBlock Text="Not a member?"
+                         Margin="0,5"
+                       VerticalAlignment="Bottom"
+                       HorizontalAlignment="Center"/>
+            <Button Content="Back"
+                   x:Name="btn_back"
+                   Margin="0,10"
+                   VerticalAlignment="Bottom"
+                   HorizontalAlignment="Center"
+                   Click="btn_back_Click"/>
+        </StackPanel>
+    </Border>
 
-        <TextBlock Text="Eamil:" Grid.Row="3" Margin="194,52,100,-29"/>
-        <TextBox Grid.Row="3" Margin="194,75,359,-52" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2"/>
-
-        <TextBlock Text="Jelszó:" Grid.Row="3" Margin="194,126,122,-103" RenderTransformOrigin="2.009,1.228"/>
-        <PasswordBox x:Name="PasswordBox" Grid.Row="3" Margin="194,149,359,-126" Grid.ColumnSpan="2" />
-        <Button Content="Bejelentkezés" Grid.Row="3" Margin="315,200,359,-183" Click="LoginButton_Click" RenderTransformOrigin="-1.755,4.125" Grid.ColumnSpan="2"/>
-        <Button Content="Vissza" x:Name="btn_back" Grid.Row="3" Margin="211,338,0,-318" Click="btn_back_Click" HorizontalAlignment="Left" Width="126" RenderTransformOrigin="0.5,0.5" Background="#FFDDDDDD" Grid.Column="1"/>
-    </Grid>
 </Window>
