--- a/Tool-Data-Inventory-Manager/RegisterViewModel.xaml
+++ b/Tool-Data-Inventory-Manager/RegisterViewModel.xaml
@@ -1,121 +1,60 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.RegisterViewModel"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Tool_Data_Inventory_Manager"
-        mc:Ignorable="d"
-        Title="RegisterViewModel" Height="450" Width="800"
-        WindowStartupLocation="CenterScreen">
-    <Grid Margin="20">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+       xmlns:local="clr-namespace:Tool_Data_Inventory_Manager"
+       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+       mc:Ignorable="d"
+       Title="RegisterViewModel" Height="450" Width="800"
+       WindowStartupLocation="CenterScreen">
+   <Grid Margin="20">
+       <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
 
-        <TextBlock Text="Regisztráció" FontSize="24" FontWeight="Bold" 
-                   HorizontalAlignment="Center" Margin="0,10,0,20"/>
+           <TextBlock Text="Regisztráció" FontSize="24" FontWeight="Bold"
+                      HorizontalAlignment="Center" Margin="0,0,0,10"
+                      Foreground="{DynamicResource PrimaryHueMidBrush}"/>
 
-        <StackPanel Grid.Row="1" VerticalAlignment="Top" Margin="0,0,0,10">
-            <!-- Név -->
-            <Grid Margin="0,5">
-                <TextBox x:Name="NameTextBox" Height="35" />
-                <TextBlock Text="Teljes név" Foreground="Gray"
-                           IsHitTestVisible="False"
-                           Margin="8,0,0,0"
-                           VerticalAlignment="Center">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Text, ElementName=NameTextBox}" Value="">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding Text, ElementName=NameTextBox}" Value="{x:Null}">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding Text, ElementName=NameTextBox}" >
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding Text, ElementName=NameTextBox}">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                            <Setter Property="Visibility" Value="Collapsed"/>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-            </Grid>
+           <!-- Vezetéknév -->
+           <TextBox x:Name="LastNameTextBox"
+                    materialDesign:HintAssist.Hint="Vezetéknév"
+                    Height="30" />
 
-            <!-- Email -->
-            <Grid Margin="0,5">
-                <TextBox x:Name="EmailTextBox" Height="35" />
-                <TextBlock Text="Email cím" Foreground="Gray"
-                           IsHitTestVisible="False"
-                           Margin="8,0,0,0"
-                           VerticalAlignment="Center">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Text, ElementName=EmailTextBox}" Value="">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding Text, ElementName=EmailTextBox}" Value="{x:Null}">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                            <Setter Property="Visibility" Value="Collapsed"/>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-            </Grid>
+           <!-- Keresztnév -->
+           <TextBox x:Name="FirstNameTextBox"
+                    materialDesign:HintAssist.Hint="Keresztnév"
+                    Height="30" />
 
-            <!-- Jelszó -->
-            <Grid Margin="0,5">
-                <PasswordBox x:Name="PasswordBox" Height="35" />
-                <TextBlock Text="Jelszó" Foreground="Gray"
-                           IsHitTestVisible="False"
-                           Margin="8,0,0,0"
-                           VerticalAlignment="Center">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Password, ElementName=PasswordBox}" Value="">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                            <Setter Property="Visibility" Value="Collapsed"/>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-            </Grid>
+           <!-- Email -->
+           <TextBox x:Name="EmailTextBox"
+                    materialDesign:HintAssist.Hint="Email cím"
+                    Height="30" />
 
-            <!-- Jelszó megerősítés -->
-            <Grid Margin="0,5">
-                <PasswordBox x:Name="ConfirmPasswordBox" Height="35" />
-                <TextBlock Text="Jelszó megerősítése" Foreground="Gray"
-                           IsHitTestVisible="False"
-                           Margin="8,0,0,0"
-                           VerticalAlignment="Center">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Password, ElementName=ConfirmPasswordBox}" Value="">
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                            <Setter Property="Visibility" Value="Collapsed"/>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-            </Grid>
+           <!-- Jelszó -->
+           <PasswordBox x:Name="PasswordBox"
+                        materialDesign:HintAssist.Hint="Jelszó"
+                        Height="30" />
 
-            <Button Content="Regisztráció" Height="40" Margin="0,20,0,0"
-                    Background="#0078D7" Foreground="White"
-                    FontWeight="SemiBold" BorderBrush="{x:Null}" />
-            <Button Content="Vissza" Height="40" Margin="0,20,0,0"
-                     Foreground="Black" Click="Button_Click"
-                    FontWeight="SemiBold" BorderBrush="{x:Null}" />
-        </StackPanel>
-    </Grid>
+           <!-- Jelszó megerősítése -->
+           <PasswordBox x:Name="ConfirmPasswordBox"
+                        materialDesign:HintAssist.Hint="Jelszó megerősítése"
+                        Height="30" />
 
-</Window>
+           <!-- Gombok -->
+           <Button Content="Regisztráció"
+                   x:Name="btn_reg"
+                   Height="25"
+                   Margin="0,20,0,0"
+                   Foreground="{DynamicResource PrimaryHueMidBrush}"
+                   FontWeight="Bold"
+                   Click="btn_reg_Click" />
+
+           <Button Content="Vissza"
+                   x:Name="btn_back"
+                   Height="25"
+                   Foreground="{DynamicResource PrimaryHueMidBrush}"
+                   FontWeight="SemiBold"
+                   Click="btn_back_Click" />
+       </StackPanel>
+   </Grid>
+</Window>  
