--- a/Tool-Data-Inventory-Manager/SelectMachineWindow.xaml
+++ b/Tool-Data-Inventory-Manager/SelectMachineWindow.xaml
@@ -58,6 +58,7 @@
                 <Button x:Name="btn_del_product" Content="Delete SAPproductid" Width="150" Click="btn_del_product_Click"/>
                 <Button x:Name="btn_del_machine" Content="Delete machine" Width="150" Click="btn_del_machine_Click"/>
             </StackPanel>
+            <Button x:Name="btn_next" Content="Next" Width="150" Click="btn_next_Click" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="205,10,0,0"/>
         </Grid>
     </Grid>
 </Window>
