refactor: remove logic part from xml

--- a/Tool-Data-Inventory-Manager/SelectMachineWindow.xaml
+++ b/Tool-Data-Inventory-Manager/SelectMachineWindow.xaml
@@ -35,7 +35,7 @@
             <StackPanel Grid.Row="0" Grid.Column="0">
                 <ComboBox x:Name="cb_SapProductId"
                           Width="200" 
-                          materialDesign:HintAssist.Hint="gyártott termék szám / SAP product id" IsEnabled="False">
+                          materialDesign:HintAssist.Hint="gyártott termék szám / SAP product id">
                     <!-- Items go here -->
                 </ComboBox>
                 <ComboBox x:Name="cb_Machine"
@@ -47,16 +47,16 @@
 
             <!-- Middle Column -->
             <StackPanel Grid.Row="0" Grid.Column="1">
-                <Button x:Name="btn_add_product" Content="Add SAPproductid" Width="150" Click="btn_add_product_Click" IsEnabled="False"/>
+                <Button x:Name="btn_add_product" Content="Add SAPproductid" Width="150" Click="btn_add_product_Click"/>
                 <Button x:Name="btn_add_machine" Content="Add machine" Width="150" Click="btn_add_machine_Click"/>
             </StackPanel>
 
             <!-- Right Column -->
             <StackPanel Grid.Row="0" Grid.Column="2">
-                <Button x:Name="btn_del_product" Content="Delete SAPproductid" Width="150" Click="btn_del_product_Click" IsEnabled="False"/>
-                <Button x:Name="btn_del_machine" Content="Delete machine" Width="150" Click="btn_del_machine_Click" IsEnabled="False"/>
+                <Button x:Name="btn_del_product" Content="Delete SAPproductid" Width="150" Click="btn_del_product_Click"/>
+                <Button x:Name="btn_del_machine" Content="Delete machine" Width="150" Click="btn_del_machine_Click"/>
             </StackPanel>
-            <Button x:Name="btn_next" Content="Next" Width="150" Click="btn_next_Click" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="205,10,0,0" IsEnabled="False"/>
+            <Button x:Name="btn_next" Content="Next" Width="150" Click="btn_next_Click" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="205,10,0,0"/>
         </Grid>
     </Grid>
 </Window>
