--- a/Tool-Data-Inventory-Manager/App.xaml
+++ b/Tool-Data-Inventory-Manager/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
              xmlns:local="clr-namespace:Tool_Data_Inventory_Manager"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Features/AuthenticationService/Views/StartWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
