--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ForgotPasswordWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ForgotPasswordWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="Forgot Password" Height="400" Width="650"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        Icon="/Resources/Tool-Data-Icon.png">
     <Border Width="650"
             Height="400"
             Background="White"
