--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
@@ -8,7 +8,8 @@
         xmlns:helper="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="Login" Height="400" Width="650"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        Icon="/Resources/Tool-Data-Icon.png">
     <Border Width="650"
             Height="400"
             Background="White"
