--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/RegisterWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/RegisterWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="Regisztráció" Height="500" Width="650"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        Icon="/Resources/Tool-Data-Icon.png">
     <Border Width="650"
             Height="500"
             Background="White"
