--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/EditMachineWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/EditMachineWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.EditMachineWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Gép szerkesztése" Height="300" Width="400">
+        Title="Gép szerkesztése" Height="300" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
