--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ProductEditorWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ProductEditorWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.ProductEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Product szerkesztése" Height="350" Width="400" WindowStartupLocation="CenterOwner">
+        Title="Product szerkesztése" Height="350" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
