--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolCreateWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolCreateWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.ToolCreateWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Új Tool hozzáadása" Height="450" Width="400" WindowStartupLocation="CenterOwner">
+        Title="Új Tool hozzáadása" Height="450" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -40,8 +40,8 @@
 
         <!-- Gombok -->
         <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button Content="Mentés" Width="80" Click="Save_Click" Margin="5"/>
-            <Button Content="Mégse" Width="80" Click="Cancel_Click" Margin="5"/>
+            <Button Content="Mentés" Width="80" Click="Save_Click" Margin="5" Height="33"/>
+            <Button Content="Mégse" Width="80" Click="Cancel_Click" Margin="5" Height="43"/>
         </StackPanel>
     </Grid>
 </Window>
