--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolHasProductsWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolHasProductsWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.ToolHasProductsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Kapcsolódó termékek" Height="300" Width="400">
+        Title="Kapcsolódó termékek" Height="300" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <TextBlock Text="Ez a szerszám a következő termékekhez van hozzárendelve:" 
                    FontWeight="Bold" Margin="0,0,0,10"/>
